--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "dependencies": {
     "axios": "^1.5.1",
+    "module-alias": "^2.2.3",
     "puppeteer": "^21.4.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
+  },
+  "_moduleAliases": {
+    "@": ".",
+    "@modules": "./src/modules",
+    "@mixins": "./src/js/mixins",
+    "@plugins": "./src/js/plugins",
+    "@public": "./public"
   }
 }
