initial docker setup

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start" : "node src/main.js"
+    "start" : "node src/main.js",
+    "dockerInstall": "npm install && npx puppeteer browsers install chrome"
   },
   "_moduleAliases": {
     "@": ".",
